--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
-    "cypress": "^13.16.0"
+    "cypress": "^13.16.0",
+    "mochawesome": "^7.1.3"
   }
 }
